--- a/index.html
+++ b/index.html
@@ -298,7 +298,10 @@ body{
         <a href="./docs/cv.doc"class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Hoja de vida</a>
       </div>
       <!-- mapa de sueños  -->
-
+      <div class="w3-center">
+        <h2 class="w3-center w3-text-light-grey" style="margin-top: 50px;">📌 Mi mapa de sueños</h2>
+        <img src="./img/fly.webp" alt="Marca personal" class=" w3-image w3-round" style="width: 50%; height: auto; object-fit: cover; margin-top: 50px;">
+      </div>
 
 <br><br>
 
